[package]
name = "controller"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.25.0"
egui_extras = "0.25.0"
env_logger = "0.11.1"
chrono = "0.4.33"
tokio = { version = "1.35.1", features = ["full"] }
futures-util = "0.3.30"
mdns = "3.0.0"
approx = "0.5.1"
nalgebra = "0.32.3"
serde = "1.0.195"

[target.x86_64-pc-windows-gnu]
linker = "/usr/bin/x86_64-w64-mingw32-gcc"
ar = "/usr/x86_64-w64-mingw32/bin/ar"

