[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.23.0"
egui_extras = "0.23.0"
env_logger = "0.10.0"
chrono = "0.4.31"
tokio = { version = "1", features = ["full"] }
byteorder = "1.5.0"
